--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     font-family: "Open Sans", sans-serif;
     margin: 0;
 }
-input {
+input,textarea {
     outline: none;
 }
 .main {
@@ -96,13 +96,16 @@ header .search-bar::after {
 header .search-bar input {
     border: 1px solid #ddd;
     padding: 10px;
-    border-radius: 6px;
+    border-radius: 8px;
     width: 160px;
     transition: width 0.3s;
     padding-left: 26px;
 }
 header .search-bar input:focus {
     width: 200px;
+}
+header .search-bar input:focus::placeholder {
+    opacity: 0;
 }
 header .options span::after {
     content: "";
@@ -118,3 +121,110 @@ header .options:hover {
     cursor: pointer;
 }
 /* END header style */
+main > h1 {
+    width: fit-content;
+}
+main > h1::before {
+    content: '';
+    position: absolute;
+    bottom: -12px;
+    left: -1px;
+    width: 70%;
+    height: 3px;
+    background-color: white;
+}
+main > h1::after {
+    content: '';
+    position: absolute;
+    bottom: -12px;
+    left: -1px;
+    width: 30%;
+    height: 3px;
+    background-color: black;
+}
+/* Start Dashboard main content style */
+/* welcome card style */
+.dashboard .welcome {
+    overflow: hidden;
+}
+.dashboard .welcome .head img{
+    width: 200px;
+}
+.dashboard .welcome .avatar {
+    width: 62px;
+    border: 4px solid white;
+    margin-top: -34px;
+    margin-left: 20px;
+}
+.dashboard .welcome .body {
+    border-top: 1px #eee solid;
+    border-bottom: 1px #eee solid;
+}
+
+.dashboard .btn {
+    transition: .3s;
+    display: block;
+    width: fit-content !important;
+    margin: 10px 10px 10px auto;
+
+}
+.dashboard .btn:hover {
+    background-color: var(--blue-alt-color);
+}
+/* END welcome card style */
+/* draft card style */
+.dashboard .draft input,
+.dashboard .draft textarea {
+    width: 100%;
+    border: none;
+    border-radius: 8px;
+}
+.dashboard .draft textarea {
+    height: 200px;
+    resize: none;
+}
+/* END draft card style */
+/* stats style */
+
+.dashboard .stats .icon i{
+    background-color: rgb(0 117 255 / 20%);
+    padding: 42px 36px ;
+    margin-right: 16px;
+
+}
+.dashboard .stats .bar {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 12px 0;
+}
+.dashboard .stats .bar .progress {
+    width: 100%;
+    height: 4px;
+    background-color: rgba(0,119,255,60%);
+}
+.dashboard .stats .bar .money {
+    width: 80%;
+    height: 4px;
+    background-color: var(--blue-color);
+}
+.dashboard .stats .bar .box {
+    left: calc(80% - 16px);
+    top: -38px;
+    padding: 3px 4px;
+    font-size: 14px;
+    border-radius: 4px;
+}
+.dashboard .stats .bar .box::after {
+    content: '';
+    position: absolute;
+    left: 8px;
+    top: 25px;
+    border: 8px solid;
+    border-color: var(--blue-color) transparent transparent transparent;
+    
+}
+
+/* END stats style */
+/* END Dashboard main content style */
