--- a/css/framework.css
+++ b/css/framework.css
@@ -6,21 +6,26 @@
     --red-color: #f44336;
     --grey-color: #888;
 }
+
 img {
     max-width: 100%;
 }
+
 /* List style */
 li {
     list-style: none;
 }
+
 a {
     color: black;
     text-decoration: none;
 }
+
 /* Margin */
 .mg-auto {
     margin: auto;
 }
+
 .mg-6{
     margin: 6px;
 }
@@ -228,9 +233,22 @@ a {
     grid-template-columns: repeat(auto-fill , minmax(450px , 1fr));
     margin-top: 40px;
 }
+@media (max-width: 600px) {
+    .d-grid {
+        grid-template-columns: repeat(auto-fill , minmax(260px , 1fr));
+    }
+}
+@media (max-width: 400px) {
+    .d-grid {
+        grid-template-columns: repeat(auto-fill , minmax(180px , 1fr));
+    }
+}
 /* flex */
 .d-flex {
     display: flex;
+}
+.col {
+    flex-direction: column;
 }
 .align {
     align-items: center;
@@ -274,6 +292,9 @@ a {
 .bg-green {
     background-color: var(--green-color);
 }
+.bg-orange {
+    background-color: var(--orange-color);
+}
 .bg-eee {
     background-color: #eee;
 }
@@ -315,7 +336,9 @@ a {
 .c-green {
     color: var(--green-color);
 }
-
+.c-red {
+    color: var(--red-color);
+}
 /* font */
 .fs-14 {
     font-size: 14px;
@@ -329,6 +352,9 @@ a {
 .fs-20 {
     font-size: 20px;
 }
+.fs-24 {
+    font-size: 24px;
+}
 .fw-b {
     font-weight: bold;
 }
@@ -337,8 +363,49 @@ a {
     text-align: center;
 }
 /* btn */
-.btn {
+.btn-shape {
     border: none;
     border-radius: 6px;
-    padding: 4px 12px;
+    padding: 4px 10px;
+}
+/* Set width */
+.w-40 {
+    width: 40px;
+}
+.w-100 {
+    width: 100px;
+}
+.w-120 {
+    width: 120;
+}
+.w-130 {
+    width: 130px;
+}
+.w-160 {
+    width: 160px;
+}
+/* Set height */
+.h-40 {
+    height: 40px;
+}
+.h-100 {
+    height: 100px;
+}
+.h-120 {
+    height: 120;
+}
+.h-130 {
+    height: 130px;
+}
+.h-160 {
+    height: 160px;
+}
+/* screen options */
+@media(max-width: 768px) {
+    .del-small {
+        display: none;
+    }
+    .txt-small-center {
+        text-align: center;
+    }
 }
