--- a/css/style.css
+++ b/css/style.css
@@ -593,6 +593,73 @@ background-color: rgb(255 0 0 / 20%);
 /* END projects table style */
 /* END Dashboard main content style */
 
+/* Starts settings main content style */
+/* Starts site control box style */
+.settings .switch-btn {
+    position: relative;
+    width: 76px;
+    height: 34px;
+    background-color: #ccc;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: .3s;
+}
+.settings .switch-btn.active {
+    background-color: var(--blue-color);
+}
+.settings .switch-btn::before {
+    font-family: var(--fa-style-family-classic);
+    content: "\f00d";
+    font-weight: 900;
+    background-color: white;
+    top: 50%;
+    left: 3px;
+    position: absolute;
+    transform: translateY(-50%);
+    color: #aaa;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .3s;
+}
+.settings .switch-btn.active::before {
+    content: "\f00c";
+    left: 44px;
+    color: var(--blue-color);
+}
+.settings .control textarea {
+    width: 100%;
+    height: 140px;
+    border: 1px solid #ccc;
+    resize: none;
+}
+/* END site control box style */
+/* General info box style */
+.settings .g-info label {
+    display: block;
+}
+.settings .g-info input {
+    display: inline-block;
+    margin-top: 8px;
+    width: 100%;
+    height: 40px;
+    border: 1px #ccc solid;
+    border-radius: 8px;
+    padding-left: 12px;
+}
+.settings .g-info input.email {
+    margin-right: 12px;
+    width: calc(100% - 74px);
+    cursor: not-allowed;
+    background-color: #f0f4f8;
+    color: #bbb;
+}
+/* END General info box style */
+/* END settings main content style */
+
 
 
 
