--- a/css/style.css
+++ b/css/style.css
@@ -595,10 +595,8 @@ background-color: rgb(255 0 0 / 20%);
 
 /* END projects table style */
 /* END Dashboard main content style */
-
-/* Starts settings main content style */
-/* Starts site control box style */
-.settings .switch-btn {
+/* Switch btn style */
+.switch-btn {
     position: relative;
     width: 76px;
     height: 34px;
@@ -607,10 +605,10 @@ background-color: rgb(255 0 0 / 20%);
     cursor: pointer;
     transition: .3s;
 }
-.settings .switch-btn.active {
+.switch-btn.active {
     background-color: var(--blue-color);
 }
-.settings .switch-btn::before {
+.switch-btn::before {
     font-family: var(--fa-style-family-classic);
     content: "\f00d";
     font-weight: 900;
@@ -628,11 +626,15 @@ background-color: rgb(255 0 0 / 20%);
     align-items: center;
     transition: .3s;
 }
-.settings .switch-btn.active::before {
+.switch-btn.active::before {
     content: "\f00c";
     left: calc(100% - 30px);
     color: var(--blue-color);
 }
+/* END Switch btn style */
+
+/* Starts settings main content style */
+/* Starts site control box style */
 .settings .control textarea {
     width: 100%;
     height: 140px;
@@ -788,6 +790,9 @@ background-color: rgb(255 0 0 / 20%);
 .settings .backup .radios input[type = "radio"]:checked + label:after {
     transform: scale(1);
 }
+.settings .backup .cards {
+    flex-wrap: wrap;
+}
 .settings .backup .cards label {
     min-width: 136px;
     cursor: pointer;
@@ -805,6 +810,40 @@ background-color: rgb(255 0 0 / 20%);
     color: var(--blue-color);
 }
 /* END Backup box style */
+/* Start Profile box style */
+.profile .card img {
+    width: 128px;
+    height: 128px;
+}
+.profile .card .profile-info {
+    width: 300px;
+    border-right: 1px solid #eee;
+}
+.profile .card .profile-info .progress-bar {
+    width: 150px;
+    height: 6px;
+    background-color: rgb(0 119 255 / 16%);
+    border-radius: 8px;
+}
+.profile .card .profile-info .progress-bar::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 65%;
+    height: 100%;
+    background-color: var(--blue-color);
+    border-radius: 8px;
+}
+.profile .card .settings {
+    width: 100%;
+}
+
+.profile .card .settings li > div {
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+/* END Profile box style */
 
 /* END settings main content style */
 
